# learn-core-python

./: .gitignore  LICENSE  README.md
00-setup/: 01_verify_installation.py  02_virtual_environment.py  03_project_layout.py  README.md
01-fundamentals/: 01_hello_world.py  02_variables_and_types.py  03_operators.py  04_input_output.py  05_truthiness_and_identity.py  06_bytes_and_encoding.py  README.md
02-control-flow/: 01_if_else.py  02_loops.py  03_break_continue_pass.py  04_match_case.py  README.md
03-data-structures/: 01_lists.py  02_tuples.py  03_sets.py  04_dictionaries.py  05_copy_shallow_deep.py  (+1 more)
fastapi-with-python/task-api/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
fastapi-with-python/task-api/alembic/: env.py
fastapi-with-python/task-api/alembic/versions/: 001_initial_tasks_table.py  002_users_and_task_ownership.py
fastapi-with-python/task-api/app/: __init__.py  factory.py
fastapi-with-python/task-api/app/api/v1/endpoints/: __init__.py  auth.py  tasks.py  users.py
fastapi-with-python/task-api/app/core/: limiter.py  rbac.py  security.py
fastapi-with-python/task-api/app/db/: __init__.py  init_db.py  session.py
fastapi-with-python/task-api/app/models/: task.py
fastapi-with-python/task-api/app/schemas/: auth.py  common.py  task.py
fastapi-with-python/task-api/app/services/: auth_service.py  task_service.py
fastapi-with-python/task-api/scripts/: prestart.sh
fastapi-with-python/task-api/tests/: __init__.py  conftest.py
fastapi-with-python/task-api/tests/api/v1/: test_auth.py  test_rbac.py  test_tasks.py
(+291 files in other folders)
